Had to fix the text alignment under the boxes

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    /* outline: 2px solid blue; */
     box-sizing: border-box;
 }
 
@@ -133,7 +134,7 @@ a:hover {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 100px;
+    gap: 50px;
     padding: 5px;
 }
 
